--- a/config/joy_teleop.yaml
+++ b/config/joy_teleop.yaml
@@ -1,17 +1,17 @@
-joy_node:
-  dev: "/dev/input/js0"
-  deadzone: 0.12
-  autorepeat_rate: 100.0
+dev: "/dev/input/js0"
+deadzone: 0.12
+start_button: 0
+stop_button: 1
 teleop:
   move:
     type: topic
     message_type: geometry_msgs/Twist
-    topic_name: joy_cmd_vel
+    topic_name: cmd_vel
     axis_mappings:
       - axis: 1
         target: linear.x
         scale: 2.0
-      - axis: 0
+      - axis: 3
         target: angular.z
         scale: 2.0
 
