--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ project(chassis_base)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
-  joy
   sensor_msgs
   geometry_msgs
 )
@@ -104,10 +103,13 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES chassis_base
-#  CATKIN_DEPENDS geometry_msgs sensor_msgs
-#  DEPENDS system_lib
+        INCLUDE_DIRS
+        include
+        LIBRARIES
+        chassis_base
+        CATKIN_DEPENDS
+        roscpp
+        #  DEPENDS system_lib
 )
 
 ###########
@@ -117,8 +119,8 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
-  ${catkin_INCLUDE_DIRS}
+        include
+        ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -134,7 +136,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(joystick_teleop src/joystick_teleop.cpp)
+add_executable(cmd_transfer src/cmd_transfer.cpp src/main.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -147,9 +149,9 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(joystick_teleop
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(cmd_transfer
+        ${catkin_LIBRARIES}
+        )
 
 #############
 ## Install ##
