--- a/config/joy_teleop.yaml
+++ b/config/joy_teleop.yaml
@@ -1,10 +1,12 @@
 dev: "/dev/input/js0"
 deadzone: 0.12
+start_button: 0
+stop_button: 1
 teleop:
   move:
     type: topic
     message_type: geometry_msgs/Twist
-    topic_name: controllers/chassis_base_controller/cmd_vel
+    topic_name: cmd_vel
     axis_mappings:
       - axis: 1
         target: linear.x
