--- a/package.xml
+++ b/package.xml
@@ -49,10 +49,10 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>>
-  <exec_depend>canopen_motor_node</exec_depend>
-  <exec_depend>socketcan_bridge</exec_depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>roscpp</depend>
+  <exec_depend>xow</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
