--- a/config/joy_teleop.yaml
+++ b/config/joy_teleop.yaml
@@ -1,7 +1,7 @@
-dev: "/dev/input/js0"
-deadzone: 0.12
-start_button: 0
-stop_button: 1
+joy_node:
+  dev: "/dev/input/js0"
+  deadzone: 0.12
+  autorepeat_rate: 100.0
 teleop:
   move:
     type: topic
@@ -11,7 +11,7 @@ teleop:
       - axis: 1
         target: linear.x
         scale: 2.0
-      - axis: 3
+      - axis: 0
         target: angular.z
         scale: 2.0
 
