--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,8 +136,8 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(cmd_transfer src/cmd_transfer.cpp src/main.cpp)
-
+add_executable(cmd_transfer src/cmd_transfer.cpp src/cmd_transfer_node.cpp)
+add_executable(lamp_node src/gpio_manager.cpp src/Lamp_node.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
