--- a/package.xml
+++ b/package.xml
@@ -52,6 +52,7 @@
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>roscpp</depend>
+  <depend>roslint</depend>
   <exec_depend>xow</exec_depend>
 
 
