--- a/config/joy_teleop.yaml
+++ b/config/joy_teleop.yaml
@@ -6,7 +6,7 @@ teleop:
   move:
     type: topic
     message_type: geometry_msgs/Twist
-    topic_name: cmd_vel
+    topic_name: joy_cmd_vel
     axis_mappings:
       - axis: 1
         target: linear.x
