所有配置没问题了

--- a/config/test_controller.yaml
+++ b/config/test_controller.yaml
@@ -5,5 +5,5 @@ controllers:
   
   joint_velocity_controller:
     type: velocity_controllers/JointVelocityController
-    joint: "front_left_joint"
+    joint: "front_right_joint"
     required_drive_mode: 3
